<resources>
    <string name="app_name">BlueDaisy</string>
    <string name="button_retry">Retry</string>
    <string name="connecting_status_text">Connecting…</string>
    <string name="connection_failed_status_text">Connection failed.</string>
    <string name="connection_lost_status_text">Connection lost.</string>

    <!--BottomBar Tabs-->
    <string name="general_tab_text">General</string>
    <string name="media_tab_text">Media</string>
    <string name="presentation_tab_text">Presentation</string>

    <!--General Tab-->
    <string name="lock_btn_cd">Screen lock</string>
    <string name="brightness_down_btn_cd">Screen lock</string>
    <string name="brightness_btn_text">BRIGHTNESS</string>
    <string name="wifi_btn_text">WIFI</string>

    <!--Media Tab-->
    <string name="rewind_btn_cd">Rewind</string>
    <string name="forward_btn_cd">Forward</string>
    <string name="pause_btn_cd">Pause</string>
    <string name="volume_up_btn_cd">Volume up</string>
    <string name="volume_down_btn_cd">Volume down</string>
    <string name="mute_btn_cd">Mute</string>
    <string name="unmute_btn_cd">Unmute</string>
    <string name="mute_btn_text">MUTE/UNMUTE</string>

    <!--Presentation Tab-->
    <string name="back_btn_cd">Back</string>
    <string name="start_btn_cd">Start</string>
    <string name="next_btn_cd">Next</string>
</resources>
