<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/bd_padding"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >

        <ImageButton
            android:id="@+id/lockButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_lock_outline_black_24dp"
            android:background="@drawable/big_round_button"
            android:contentDescription="@string/lock_btn_cd"
            />

        <RelativeLayout
            android:id="@+id/brightnessLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lockButton"
            android:layout_marginTop="@dimen/bd_section_height_size"
            >

            <ImageButton
                android:id="@+id/brightnessDownButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:src="@drawable/ic_brightness_low_black_24dp"
                android:background="@drawable/small_round_button"
                android:contentDescription="@string/brightness_down_btn_cd"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/brightness_btn_text"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                />

            <ImageButton
                android:id="@+id/brightnessUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_brightness_high_black_24dp"
                android:background="@drawable/small_round_button"
                android:contentDescription="@string/brightness_down_btn_cd"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/brightnessLayout"
            android:layout_marginTop="@dimen/bd_section_height_size"
            >

            <ImageButton
                android:id="@+id/wifiOffButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:src="@drawable/ic_signal_wifi_off_black_24dp"
                android:background="@drawable/small_round_button"
                android:contentDescription="@string/brightness_down_btn_cd"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/wifi_btn_text"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                />

            <ImageButton
                android:id="@+id/wifiOnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_wifi_black_24dp"
                android:background="@drawable/small_round_button"
                android:contentDescription="@string/brightness_down_btn_cd"
                />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>